--- a/misc/misc-openstreetmap/build.gradle
+++ b/misc/misc-openstreetmap/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "java"
+    id("java")
 }
 
 description = "Projekt für das Rendern von GEO Daten von http://www.openstreetmap.org"
