--- a/jsensors/build.gradle
+++ b/jsensors/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "java"
+    id("java")
 }
 
 description = "Sensor-Application for System-Monitoring (simplified micrometer clone)"
