--- a/meta-model/build.gradle
+++ b/meta-model/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "java-library"
+    id("java-library")
 }
 
 description = "Code-Generierung durch MetaDaten."
@@ -24,7 +24,7 @@ tasks.register("deleteAppFolder", Delete) {
     description = "Delete app-Folder."
     group = "Maintenance"
 
-    logger.lifecycle "delete app-Folder: ${projectDir}/src/test/generated"
+    logger.lifecycle("delete app-Folder: ${projectDir}/src/test/generated")
 
     delete fileTree("src/test/generated") {
         include "**/*.*"
