--- a/misc/misc-protobuf/build.gradle
+++ b/misc/misc-protobuf/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id "java"
-    id "com.google.protobuf" version "$version_protobufGradlePlugin"
+    id("java")
+    id("com.google.protobuf")
 }
 
 description = "Google Protobuf Demo"
