--- a/misc/misc-cache/build.gradle
+++ b/misc/misc-cache/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     implementation("org.ehcache:ehcache:${dependencyManagement.importedProperties["ehcache3.version"]}:jakarta")
     implementation("org.slf4j:jul-to-slf4j")
     implementation("org.springframework.boot:spring-boot-starter-cache") {
-        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+        exclude(group: "org.springframework.boot", module: "spring-boot-starter-logging")
     }
 
     runtimeOnly("org.slf4j:slf4j-simple")
