--- a/misc/misc-log4j3/gradle.properties
+++ b/misc/misc-log4j3/gradle.properties
@@ -1,11 +1,21 @@
-# The default is -Xmx512m "-XX:MaxMetaspaceSize=256m"
-#-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
-org.gradle.jvmargs = -Xmx4096m -XX:MaxMetaspaceSize=2048m -Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8
-file.encoding = UTF-8
-
 group = "de.freese"
 version = "1.0-SNAPSHOT"
-description = Just some Tool.
+description = Log4J3 Demo.
+
+####################################################################################################
+
+# The default is -Xmx512m "-XX:MaxMetaspaceSize=256m"
+#-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
+org.gradle.jvmargs = -Xmx1024m -XX:MaxMetaspaceSize=2048m -Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8
+file.encoding = UTF-8
+
+org.gradle.configuration-cache = true
+org.gradle.configuration-cache.problems = WARN
+
+# all,fail,summary,none
+org.gradle.warning.mode = all
+
+####################################################################################################
 
 #G:A org.hsqldb:hsqldb
 version_hsqldb = 2.7.4
