--- a/misc/misc-log4j3/gradle.properties
+++ b/misc/misc-log4j3/gradle.properties
@@ -1,6 +1,6 @@
 group = "de.freese"
 version = "1.0-SNAPSHOT"
-description = Log4J3 Demo.
+description = "Log4J3 Demo."
 
 ####################################################################################################
 
