--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,9 @@ include("misc:misc-openstreetmap")
 include("misc:misc-protobuf")
 include("misc:misc-sonstiges")
 include("misc:misc-sudoku")
+
+println("")
+println("Gradle version: ${GradleVersion.current().version}")
+println("Java version: ${JavaVersion.current()}")
+println("MaxWorkerCount: ${gradle.getStartParameter().getMaxWorkerCount()}")
+println("")
