--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ description = Java-Projects
 
 #org.gradle.usage = linuxRuntime
 
-org.gradle.configuration-cache = false
-org.gradle.configuration-cache.parallel = false
+org.gradle.configuration-cache = true
+org.gradle.configuration-cache.parallel = true
