--- a/misc/misc-sonstiges/build.gradle
+++ b/misc/misc-sonstiges/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     jaxb("com.sun.xml.bind:jaxb-xjc")
     jaxb("com.sun.xml.bind:jaxb-impl")
 
-    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml")
-    implementation("com.fasterxml.jackson.module:jackson-module-jaxb-annotations")
+    implementation("tools.jackson.dataformat:jackson-dataformat-xml")
+    implementation("tools.jackson.module:jackson-module-jaxb-annotations")
 
     implementation("com.lmax:disruptor")
     implementation("com.zaxxer:HikariCP")
@@ -43,9 +43,11 @@ dependencies {
     implementation("org.apache.xmlgraphics:batik-codec")
     implementation("org.apache.xmlgraphics:batik-swing")
     implementation("org.apache.velocity:velocity-engine-core")
+    implementation("org.eclipse.angus:angus-mail")
     implementation("org.freemarker:freemarker")
     implementation("org.jsoup:jsoup")
     implementation("org.mariadb.jdbc:mariadb-java-client")
+    implementation("org.springframework.boot:spring-boot-jdbc")
     implementation("org.springframework.boot:spring-boot-starter-mail") {
         exclude(group: "ch.qos.logback", module: "logback-classic")
         exclude(group: "org.apache.logging.log4j", module: "log4j-to-slf4j")
