--- a/cellular-machines/build.gradle
+++ b/cellular-machines/build.gradle
@@ -6,6 +6,7 @@ plugins {
 description = "Beispiele für zellulare Automaten (cellular machines)."
 
 dependencies {
+    implementation("com.formdev:flatlaf-intellij-themes")
     implementation("org.jfree:jfreechart")
     implementation("org.slf4j:slf4j-api")
 
