--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Execute Tasks in SubModule: gradle MODUL:clean build
+// Execute Tasks in SubModule: gradle MODULE:clean build
 plugins {
     id("de.freese.gradle.conventions").version("$version_myJavaConventionPlugin").apply(false)
 
