--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ rootProject.name = "java"
 
 include("binding")
 include("cellular-machines")
+include("gradle-build-cache")
 include("jsensors")
 include("logging")
 include("meta-model")
